<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_agenda"
        android:id="@+id/btnAgendamento" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_professor"
        android:id="@+id/btnProfessor" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_departamento"
        android:id="@+id/btnDepartamento" />

</LinearLayout>
